# DAQ-Technical-Assessment

./: brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt  output.txt
firmware/solution/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp
firmware/tests/: CMakeLists.txt  TestDBC1.dbc  TestDBC2.dbc  test.cpp
